<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_border"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    >

    <TextView
        android:id="@+id/expense_item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_expense_id"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/row_expense_date"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/expense_item_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_expense_type"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expense_item_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_item_name"
        android:layout_width="130dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="@string/row_expense_name"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_item_id" />

    <TextView
        android:id="@+id/expense_item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/row_expense_amount"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expense_item_name"
        app:layout_constraintTop_toBottomOf="@+id/expense_item_type" />

</androidx.constraintlayout.widget.ConstraintLayout>