<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewExpense">


    <DatePicker
        android:id="@+id/new_expense_date"
        android:layout_width="257dp"
        android:layout_height="194dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/new_expense_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></DatePicker>

    <EditText
        android:id="@+id/new_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""

        app:layout_constraintBottom_toTopOf="@+id/new_expense_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_date"
        android:hint="@string/new_expense_title"
        android:inputType="text" />

    <Spinner
        android:id="@+id/new_expense_type_spinner"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/new_expense_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_title"
        android:prompt="@string/expense_type_spinner_prompt"
        />

    <EditText
        android:id="@+id/new_expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/new_expense_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_type_spinner"

        android:hint="@string/new_expense_amount"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/new_expense_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_expense_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>